--- a/Lab1/pokemonEvolve/pokemonEvolve/Base.lproj/Main.storyboard
+++ b/Lab1/pokemonEvolve/pokemonEvolve/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,24 +12,24 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokemonEvolve" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <view key="view" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" image="ditto" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eEa-7t-lvw">
-                                <rect key="frame" x="58" y="152" width="298" height="406"/>
+                                <rect key="frame" x="58" y="151.99999999999997" width="259" height="322.33333333333326"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What should Ditto transform into?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCk-RI-Gz2">
-                                <rect key="frame" x="20" y="555" width="364" height="54"/>
+                                <rect key="frame" x="16" y="482" width="329" height="54"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="O3v-UY-5FJ"/>
+                                    <constraint firstAttribute="height" constant="54" id="MKq-Sa-Xoe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" axis="vertical" spacing="23" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNy-cO-K1C">
-                                <rect key="frame" x="48" y="639" width="318" height="99"/>
+                                <rect key="frame" x="28.666666666666657" y="555" width="318" height="99"/>
                                 <subviews>
                                     <stackView contentMode="scaleAspectFit" layoutMarginsFollowReadableWidth="YES" spacing="126" translatesAutoresizingMaskIntoConstraints="NO" id="MkX-zo-W7r">
                                         <rect key="frame" x="0.0" y="0.0" width="318" height="64"/>
@@ -86,9 +86,9 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="up5-Rc-l8y">
-                                <rect key="frame" x="173.5" y="768" width="67" height="40"/>
+                                <rect key="frame" x="154" y="684" width="67" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="eq8-uQ-Kc8"/>
+                                    <constraint firstAttribute="height" constant="40" id="SI0-eg-Mrr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="24"/>
                                 <state key="normal" title="Reset">
@@ -99,9 +99,9 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ditto loves to Transform! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVu-ZE-kLb">
-                                <rect key="frame" x="30" y="89" width="354" height="55"/>
+                                <rect key="frame" x="30" y="89" width="315" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="meW-w9-r9v"/>
+                                    <constraint firstAttribute="height" constant="55" id="GLK-f4-Omf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="18"/>
                                 <color key="textColor" red="0.64058115507803004" green="0.32041012327198487" blue="0.68399441119321835" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -111,22 +111,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.97543211900929183" green="0.98352736230000004" blue="0.87568185010391419" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eNy-cO-K1C" firstAttribute="top" secondItem="eEa-7t-lvw" secondAttribute="bottom" constant="81" id="1Dz-zt-tmP"/>
-                            <constraint firstItem="eEa-7t-lvw" firstAttribute="centerX" secondItem="kCk-RI-Gz2" secondAttribute="centerX" constant="5" id="2B1-pY-h73"/>
-                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2tu-DN-fbV"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eNy-cO-K1C" secondAttribute="trailing" constant="48" id="6Gn-1p-Ao9"/>
-                            <constraint firstItem="eNy-cO-K1C" firstAttribute="top" secondItem="kCk-RI-Gz2" secondAttribute="bottom" constant="30" id="FwZ-Bu-8fe"/>
-                            <constraint firstItem="kCk-RI-Gz2" firstAttribute="centerX" secondItem="eNy-cO-K1C" secondAttribute="centerX" constant="-5" id="JBi-8g-fZV"/>
-                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="JZZ-wo-p9h"/>
-                            <constraint firstItem="eEa-7t-lvw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="Rjg-nx-3UP"/>
-                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="SRn-94-2X3"/>
-                            <constraint firstItem="up5-Rc-l8y" firstAttribute="top" secondItem="eNy-cO-K1C" secondAttribute="bottom" constant="30" id="UIe-eZ-Aed"/>
-                            <constraint firstItem="eNy-cO-K1C" firstAttribute="centerX" secondItem="up5-Rc-l8y" secondAttribute="centerX" id="Zrl-cX-3wc"/>
-                            <constraint firstItem="eNy-cO-K1C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="48" id="byI-4E-1xh"/>
-                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="centerX" secondItem="eEa-7t-lvw" secondAttribute="centerX" id="hwh-2z-yRJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="up5-Rc-l8y" secondAttribute="bottom" constant="54" id="m1Y-tc-HHg"/>
-                            <constraint firstItem="eEa-7t-lvw" firstAttribute="top" secondItem="MVu-ZE-kLb" secondAttribute="bottom" constant="8" symbolic="YES" id="qK3-EI-bTD"/>
-                            <constraint firstItem="kCk-RI-Gz2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="swk-wc-SyO"/>
+                            <constraint firstItem="kCk-RI-Gz2" firstAttribute="firstBaseline" secondItem="eEa-7t-lvw" secondAttribute="baseline" constant="23" symbolType="layoutAnchor" id="1mG-nv-daV"/>
+                            <constraint firstItem="up5-Rc-l8y" firstAttribute="top" secondItem="eNy-cO-K1C" secondAttribute="bottom" constant="30" id="F05-O4-78J"/>
+                            <constraint firstItem="eNy-cO-K1C" firstAttribute="top" secondItem="kCk-RI-Gz2" secondAttribute="bottom" constant="19" id="FKF-mA-p3b"/>
+                            <constraint firstItem="eEa-7t-lvw" firstAttribute="centerX" secondItem="eNy-cO-K1C" secondAttribute="centerX" id="LH1-yv-K76"/>
+                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="trailing" secondItem="kCk-RI-Gz2" secondAttribute="trailing" id="LTt-8X-3sr"/>
+                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Pn8-9x-Ju6"/>
+                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="TGS-1Z-7jv"/>
+                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YFv-S9-Tdf"/>
+                            <constraint firstItem="kCk-RI-Gz2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bj8-4i-UQi"/>
+                            <constraint firstItem="eEa-7t-lvw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="nX6-DZ-Wai"/>
+                            <constraint firstItem="eNy-cO-K1C" firstAttribute="centerX" secondItem="up5-Rc-l8y" secondAttribute="centerX" id="ukA-FH-4LV"/>
+                            <constraint firstItem="eEa-7t-lvw" firstAttribute="top" secondItem="MVu-ZE-kLb" secondAttribute="bottom" constant="8" symbolic="YES" id="w3V-9F-j2O"/>
+                            <constraint firstItem="MVu-ZE-kLb" firstAttribute="centerX" secondItem="eEa-7t-lvw" secondAttribute="centerX" id="xWK-HU-s9i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="up5-Rc-l8y" secondAttribute="bottom" constant="54" id="zK5-Rc-ek0"/>
                         </constraints>
                     </view>
                     <connections>
