--- a/Lab1/pokemonEvolve/pokemonEvolve/Base.lproj/Main.storyboard
+++ b/Lab1/pokemonEvolve/pokemonEvolve/Base.lproj/Main.storyboard
@@ -73,11 +73,11 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" layoutMarginsFollowReadableWidth="YES" text="Ditto loves to Transform! " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVu-ZE-kLb">
-                                <rect key="frame" x="74.5" y="89" width="265" height="55"/>
+                                <rect key="frame" x="101" y="89" width="212" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="7jo-OQ-N33"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <color key="textColor" red="0.64058115507803004" green="0.32041012327198487" blue="0.68399441119321835" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -92,8 +92,8 @@
                                     <action selector="changeImageAndText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8yl-Z3-DS6"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What should Ditto transform into?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCk-RI-Gz2">
-                                <rect key="frame" x="23" y="588" width="369" height="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What should Ditto transform into?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCk-RI-Gz2">
+                                <rect key="frame" x="23" y="588" width="368" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="284" id="kQ8-5x-lah"/>
                                     <constraint firstAttribute="height" constant="23" id="wHY-Fh-IDV"/>
